feat(sdk): Add support for api keys
This commit introduces a new version of the server client (V2) to
support API key authentication and resource evaluation. It includes new
DTOs for API key responses and evaluation requests, along with
corresponding tests.